[package]
name = "auctioneer-syn"
version = "0.1.0"
description = "Auctioneer syntax parsing and code generation tools"
edition = "2018"

[dependencies]
anchor-lang = "0.23.0"
solana-program = "~1.8.16"
proc-macro2 = { version = "1.0", features=["span-locations"]}
proc-macro2-diagnostics = "0.9"
quote = "1.0"
syn = { version = "1.0.60", features = ["full", "extra-traits", "parsing"] }